--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["dify_knowledge_sdk"]
 
 [tool.ruff]
 line-length = 88
