chore(README): 更新安装包名及仓库链接
- 将安装包名由 dify-sdk 改为 dify-knowledge-sdk
- 更新导入路径中的包名为 dify_knowledge_sdk
- 修改克隆仓库地址为 LeekJay/dify-knowledge-sdk
- 调整代码格式化命令为 ruff 相关指令
- 更新问题跟踪器链接指向新仓库
- 升级版本号至 v0.2.0，反映新 SDK 版本

chore(core): 更新版本号至 0.2.0

- 修改 __init__.py 和 pyproject.toml 中的版本信息
- 更新 uv.lock 中对应依赖版本
- 添加发布相关依赖和配置如 build 和 twine
- 调整开发和发布依赖声明方式

docs(examples): 修改示例代码中客户端引用及描述

- 将示例中 dify_sdk 改为 dify_knowledge_sdk
- 更新示例描述中 SDK 名称的表述
- 确保示例代码和文档一致，便于用户理解和使用

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dify-knowledge-sdk"
-version = "0.1.0"
+version = "0.2.0"
 description = "Python SDK for Dify Knowledge Base API"
 readme = "README.md"
 requires-python = ">=3.8.1"
@@ -21,12 +21,12 @@ classifiers = [
 ]
 dependencies = [
     "httpx>=0.28.1",
- "pydantic>=2.10.6",
- "twine>=6.1.0",
+    "pydantic>=2.10.6",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.12.7", "mypy>=1.0.0"]
+publish = ["twine>=6.1.0", "build>=1.0.0"]
 
 [project.urls]
 Homepage = "https://github.com/LeekJay/dify-knowledge-sdk"
@@ -89,4 +89,10 @@ python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
 addopts = "-v --tb=short"
+
+[dependency-groups]
+publish = [
+    "build>=1.2.2.post1",
+    "twine>=6.1.0",
+]
 
