--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "dify-knowledge-sdk"
-version = "0.2.0"
-description = "Python SDK for Dify Knowledge Base API"
+name = "dify-dataset-sdk"
+version = "0.3.0"
+description = "Python SDK for Dify Dataset API"
 readme = "README.md"
 requires-python = ">=3.8.1"
 authors = [{ name = "Dify SDK Team" }]
-keywords = ["dify", "knowledge-base", "api", "sdk"]
+keywords = ["dify", "dataset", "knowledge-base", "api", "sdk"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -19,27 +19,24 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
-dependencies = [
-    "httpx>=0.28.1",
-    "pydantic>=2.10.6",
-]
+dependencies = ["httpx>=0.28.1", "pydantic>=2.10.6"]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.12.7", "mypy>=1.0.0"]
 publish = ["twine>=6.1.0", "build>=1.0.0"]
 
 [project.urls]
-Homepage = "https://github.com/LeekJay/dify-knowledge-sdk"
+Homepage = "https://github.com/LeekJay/dify-dataset-sdk"
 Documentation = "https://docs.dify.ai/"
-Repository = "https://github.com/LeekJay/dify-knowledge-sdk"
-Issues = "https://github.com/LeekJay/dify-knowledge-sdk/issues"
+Repository = "https://github.com/LeekJay/dify-dataset-sdk"
+Issues = "https://github.com/LeekJay/dify-dataset-sdk/issues"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["dify_knowledge_sdk"]
+packages = ["dify_dataset_sdk"]
 
 [tool.ruff]
 line-length = 88
@@ -91,8 +88,4 @@ python_functions = "test_*"
 addopts = "-v --tb=short"
 
 [dependency-groups]
-publish = [
-    "build>=1.2.2.post1",
-    "twine>=6.1.0",
-]
-
+publish = ["build>=1.2.2.post1", "twine>=6.1.0"]
