--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 description = "Python SDK for Dify Dataset API"
 readme = "README.md"
 requires-python = ">=3.8.1"
-authors = [{ name = "Dify SDK Team" }]
+authors = [{ name = "LeekJay" }]
 keywords = ["dify", "dataset", "knowledge-base", "api", "sdk"]
 classifiers = [
     "Development Status :: 4 - Beta",
